src/objects/FF_Staging_Expenses__c.object
<CustomObject>
    <fields>
        <fullName>Expense_Report_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Salesforce Id of the FinancialForce Expense Report that the integration will update.</description>
        <externalId>true</externalId>
        <inlineHelpText>Salesforce Id of the FinancialForce Expense Report that the integration will update.</inlineHelpText>
        <label>Expense Report Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Expense_Report_Reimbursement_Status__c</fullName>
        <formula>TEXT( Expense_Report__r.Reimbursement_Integration_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Report Reimbursement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PSA Expense report associated with the staging record.  This association is created during the batch updates</description>
        <inlineHelpText>PSA Expense report associated with the staging record.  This association is created during the batch updates</inlineHelpText>
        <label>Expense Report</label>
        <referenceTo>pse__Expense_Report__c</referenceTo>
        <relationshipLabel>FF Staging - Expenses</relationshipLabel>
        <relationshipName>FF_Staging_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true indicates there was an error handling the billing event batch logic.  Once the error is resolved uncheck this field to allow the batch logic to process this record again</description>
        <inlineHelpText>When true indicates there was an error handling the billing event batch logic.  Once the error is resolved uncheck this field to allow the batch logic to process this record again</inlineHelpText>
        <label>Has Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Reimbursed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Finance user can Flag in the event an expense report doesn’t get loaded into JDE correctly for some reason.</description>
        <inlineHelpText>Finance user can Flag in the event an expense report doesn’t get loaded into JDE correctly for some reason.</inlineHelpText>
        <label>Is Reimbursed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Status__c</fullName>
        <description>Indicates the reimbursement status of this Expense Report in JDE.</description>
        <inlineHelpText>Indicates the reimbursement status of this Expense Report in JDE.</inlineHelpText>
        <label>Reimbursement Status</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statuses_Match__c</fullName>
        <description>True when the staging reimbursement status and expense report status and is reimbursed indicators match, false otherwise</description>
        <formula>TEXT( Expense_Report__r.Reimbursement_Integration_Status__c ) =  Reimbursement_Status__c &amp;&amp;
Expense_Report__r.Is_Reimbursed__c = Is_Reimbursed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True when the staging reimbursement status and expense report status and is reimbursed indicators match, false otherwise</inlineHelpText>
        <label>Statuses Match</label>
        <type>Checkbox</type>
    </fields>
    <label>FF Staging - Expenses</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Has_Error__c</columns>
        <columns>Is_Reimbursed__c</columns>
        <columns>Reimbursement_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Expense_Report__c</columns>
        <columns>Statuses_Match__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>STG-Expenses-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FF Staging - Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>